[package]
name = "epithet"
version = "0.2.0"
edition = "2024"
authors = ["Brian McCallister <brianm@skife.org>"]
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.98"
assertor = { version = "0.0.4", features = ["anyhow"] }
clap = { version = "4.4", features = ["derive"] }
directories = "6.0.0"
futures = "0.3.31"
minijinja = "2.11.0"
rand = "0.9.2"
rand_core = { version = "0.9.3", features = ["os_rng"] }
ssh-agent-lib = "0.5.1"
ssh-key = { version = "0.7.0-rc.1", features = ["ed25519", "rand_core"] }
tempfile = "3.14.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
which = "7.0.1"
whoami = "1.5.2"
